Short fixes (unwanted scrollbars in tab panel)

--- a/web-client/src/main/resources/apps/geoportal/css/gnjp.css
+++ b/web-client/src/main/resources/apps/geoportal/css/gnjp.css
@@ -154,7 +154,10 @@ padding : 5px;
 		Bricolages sur l'affichage des résultats
 		 (bricolages sur templates à peine modifiés
 ************************************************************/
-
+.md-view ul li {
+	float:right !important;
+	width:95% !important;
+}
 
 li.md div.thumb {
 	float:right;
